[JELLY-75] Search classpath before creating files. For applets and JNLP
Patch from Sean Ferguson


git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/jelly/trunk@135885 13f79535-47bb-0310-9956-ffa450edef68